# A101

./: .gitignore  README.md  commit.bat  version_inc.py
sources/Device/: CMakeLists.txt  Device.out  Device.sct  Device.uvguix.Sasha  Device.uvoptx  Device.uvprojx
sources/Device/Listings/: G6-49-D.map
sources/Device/src/: Device.cpp  Device.h  Settings.cpp  Settings.h  defines.cpp  defines.h  defines.inc  main.cpp  opt.h  stm_includes.h
sources/Device/src/Ampermeter/: AD7691.cpp  AD7691.h  AD7691_stm.cpp  AVP.cpp  AVP.h  Ampermeter.cpp  Ampermeter.h  Ampermeter_settings.cpp  BufferADC.cpp  BufferADC.h  Calculator.cpp  Calculator.h  Calibrator.cpp  Calibrator.h  FIR.cpp  InputRelays.cpp  InputRelays.h
sources/Device/src/Ampermeter/Calculator/: Averager.h  Calculator.cpp  Calculator.h  FFT.cpp  FFT.h  FinderDC.cpp  FinderDC.h  FinderPeriod.cpp  FinderPeriod.h  FinderPeriodFFT.cpp  FinderPeriodFFT.h  FinderPeriodSamples.cpp  FinderPeriodSamples.h  PeriodInt.cpp  PeriodInt.h  ResolverAC.cpp  ResolverAC.h  ResolverAmpl.cpp  ResolverAmpl.h  ResolverDC.cpp  ResolverDC.h  ResolverFFT.cpp  ResolverFFT.h  ResolverFrequency.cpp  ResolverMeasures.cpp  ResolverMin.cpp  ResolverMin.h  ResolverMinMax.cpp  ResolverMinMax.h  ResolverPeak.cpp  ResolverPeriodFFT.cpp  ResolverPeriodFFT.h  ResolverPeriodSamples.cpp  ResolverPeriodSamples.h  Resolvers.h
sources/Device/src/Ampermeter/Calibrator/: Calibrator.cpp  Calibrator.h
sources/Device/src/Display/: Colors.cpp  Colors.h  DInterface.cpp  DInterface.h  DiagramFFT.cpp  DiagramFFT.h  DiagramInput.cpp  DiagramInput.h  Display.cpp  Display.h  Indicator.cpp  Indicator.h  Nextion.cpp  Nextion.h  Nextion_stm.cpp  Painter.cpp  Painter.h
sources/Device/src/Display/Controls/: CntrlText.cpp  (+7 more)
sources/Device/src/Generator/: Generator.cpp  Generator.h
sources/Device/src/Hardware/: Communicator.cpp  Communicator.h  Timer.cpp  Timer.h
sources/Device/src/Measurer/: AD7691.cpp  AD7691.h  ADC.cpp  ADC.h  BufferADC.cpp  BufferADC.h  BufferRAW.cpp  BufferRAW.h  Calculator.cpp  Calculator.h  InputRelays.cpp  InputRelays.h  Measurer.cpp  Measurer.h
sources/Device/src/Menu/: LabelMeasure.cpp  Menu.cpp  Menu.h  Menu.txt  MenuItems.cpp  MenuItems.h  PasswordResolver.cpp  PasswordResolver.h
sources/Device/src/Nextion/: Colors.cpp  Colors.h  Controls.cpp  Controls.h  DiagramFFT.cpp  DiagramFFT.h  DiagramInput.cpp  DiagramInput.h  Display.cpp  Display.h  Keyboard.cpp  Keyboard.h  Nextion.cpp  Nextion.h  Nextion_stm.cpp
sources/Device/src/SCPI/: Bootloader.cpp  Bootloader.h  Commands.cpp  Commands.h  RingBuffer.cpp  RingBuffer.h  SCPI.cpp  SCPI.h  SCPI.txt
sources/Device/src/Settings/: CalibrationSettings.cpp  CalibrationSettings.h  Settings.cpp  Settings.h
sources/Device/src/Utils/: Bootloader.cpp  Bootloader.h  Buffer.h  Debug.h  Log.cpp  Log.h  Math.cpp  Math.h  Profiler.cpp  Profiler.h  String.cpp  String.h  StringUtils.cpp  StringUtils.h
sources/Loader/: CMakeLists.txt  Loader.sct  Loader.uvguix.Sasha  Loader.uvoptx  Loader.uvprojx
sources/Loader/src/: Device.cpp  Device.h  Updater.cpp  Updater.h  defines.h  main.cpp  stm_includes.h
sources/Loader/src/Ampermeter/: BufferADC.cpp  Calibrator.cpp  Calibrator.txt  FIR.h
sources/Loader/src/Display/: Colors.cpp  DiagramFFT.cpp  DiagramInput.cpp  Display.h  Indicator.h
sources/Loader/src/Hardware/: Communicator.cpp
sources/Loader/src/Menu/: PasswordResolver.h
sources/Loader/src/Nextion/: Nextion.cpp  Nextion_stm.cpp
sources/Loader/src/SCPI/: Commands.cpp  Commands.h  SCPI.cpp  SCPI.h
sources/Loader/src/Utils/: Buffer.h  Debug.cpp  Math.cpp  Math.h  String.cpp  String.h
sources/VS/: CMakeLists.txt
sources/VS/A101-ControlPanel/: Application.h  CMakeLists.txt  Frame.cpp  Frame.h  Screen.cpp  Screen.h  defines.h  main_win.cpp
sources/VS/A101-ControlPanel/Dialogs/: Dialog.cpp  DialogNumberComPort.cpp  DialogNumberComPort.h
sources/VS/A101-ControlPanel/SCPI/: ComPort.cpp  ComPort.h  Parser.cpp  Parser.h  SCPI.cpp  SCPI.h  SCPI.txt  rs232.c
sources/VS/A101-Emu/: CMakeLists.txt  Frame.cpp
sources/VS/A101-Explorer/: CMakeLists.txt
sources/VS/A101-GUI/: Application.cpp  CMakeLists.txt  Frame.cpp  Frame.h  wx_includes.h
sources/VS/A101-GUI/Ampermeter/: AD7691_win.cpp
sources/VS/A101-GUI/Communicator/: ComPort.cpp  rs232.h
sources/VS/A101-GUI/Controls/: ConsoleSCPI.cpp
sources/VS/A101-GUI/GUI/: Application.cpp  Frame.cpp  Frame.h  MainFrame.cpp  MainFrame.h  MainWindow.cpp  MainWindow.h  Screen.cpp  Screen.h  main_win.cpp
sources/VS/A101-GUI/Nextion/: Nextion_win.cpp
sources/VS/Bootloader/: Application.cpp  Application.h  CMakeLists.txt  File.cpp  File.h  Frame.cpp  Frame.h  Upgrader.cpp  Upgrader.h  defines.h
sources/VS/Bootloader/Communicator/: ComPort.cpp  ComPort.h  rs232.cpp  rs232.h
sources/VS/Bootloader/Controls/: Sizer.cpp  Sizer.h
sources/VS/Bootloader/Utils/: GlobalFunctions.cpp  GlobalFunctions.h  String.cpp  String.h  StringUtils.cpp  StringUtils.h  Timer.cpp  Timer.h
sources/VS/Bootloader/src/: Application.cpp  Frame.cpp  Frame.h  defines.h
sources/VS/ControlPanel/: CMakeLists.txt  Screen.cpp  Screen.h  defines.h
sources/VS/ControlPanel/Dialogs/: Dialog.cpp  Dialog.h  DialogNumberComPort.cpp  DialogNumberComPort.h
sources/VS/ControlPanel/SCPI/: SCPI.cpp  SCPI.h
sources/VS/Device/: Application.cpp  Application.h  CMakeLists.txt  Frame.cpp  Frame.h  Screen.cpp  Screen.h  main_win.cpp
sources/VS/Device/Display/: DInterface_win.cpp  Nextion_win.cpp  Painter_win.cpp
sources/VS/Device/Measurer/: AD7691_win.cpp
sources/VS/Device/Nextion/: Nextion_win.cpp
sources/VS/Emulator/: CMakeLists.txt  Screen.cpp  main_win.cpp
sources/VS/Emulator/Nextion/: Nextion_win.cpp
sources/VS/Explorer/: CMakeLists.txt
sources/VS/Explorer/src/: defines.h  main.cpp
sources/VS/Flasher/: CMakeLists.txt
sources/VS/Flasher/src/: Application.cpp  Frame.cpp  Frame.h  main.cpp
sources/VS/Updater/: CMakeLists.txt  ComPort.cpp  ComPort.h  TImer.cpp  Timer.h  defines.h  main.cpp  read.me  rs232.c  rs232.h
sources/VS/hex2binA101/: CMakeLists.txt  main.cpp
(+271 files in other folders)
